--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.7.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
