--- a/web/vercel.json
+++ b/web/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/monitor-trades",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/analyze-trending",
+      "schedule": "0 */4 * * *"
     }
   ]
 }
