update fitness to include ai

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/analyze-trending",
       "schedule": "0 */4 * * *"
+    },
+    {
+      "path": "/api/cron/fitness-planner",
+      "schedule": "0 6 * * *"
     }
   ]
 }
