--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "bs58": "^6.0.0",
     "next": "16.1.3",
+    "openai": "^6.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.7.0",
